// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDetails Component should render with all props 1`] = `
<Panel.LEGACY
  title="Event Details"
>
  <Box
    borderBottom="400"
    paddingTop="500"
  />
  <Panel.LEGACY.Section>
    <LabelledValue
      key="key1"
      label={
        <Tooltip
          content="description for key1"
          dark={true}
        >
          key1
        </Tooltip>
      }
      value="val1"
    />
    <styled.div
      as={[Function]}
      key="key2"
      label="key2"
    >
      <CopyField
        hideCopy={true}
        value="[\\"an\\",\\"arrray\\"]"
      />
    </styled.div>
    <LabelledValue
      key="type"
      label="type"
      value="bounce"
    />
  </Panel.LEGACY.Section>
  <Panel.LEGACY.Section>
    <styled.div
      as={[Function]}
      label="Raw Json"
    >
      <CopyField
        hideCopy={false}
        value="{\\"key1\\":\\"val1\\",\\"key2\\":[\\"an\\",\\"arrray\\"],\\"type\\":\\"bounce\\"}"
      />
    </styled.div>
  </Panel.LEGACY.Section>
</Panel.LEGACY>
`;

exports[`EventDetails Component should render with no props 1`] = `
<Panel.LEGACY
  title="Event Details"
>
  <Box
    borderBottom="400"
    paddingTop="500"
  />
  <Panel.LEGACY.Section />
  <Panel.LEGACY.Section>
    <styled.div
      as={[Function]}
      label="Raw Json"
    >
      <CopyField
        hideCopy={false}
        value="{}"
      />
    </styled.div>
  </Panel.LEGACY.Section>
</Panel.LEGACY>
`;
